syntax = "proto3";

option go_package = "genprotos/";

package user;

service UserService{
    rpc RegisterUser(RegisterUserRequest) returns(RegisterUserResponse){}
    rpc LoginUser(LoginUserRequest) returns(LoginUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse){}
    rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse){}
    rpc ChangePassword(ChangePasswordRequest) returns(ChangePasswordResponse){}
    rpc ResetPassword(ResetPasswordRequest) returns(ResetPasswordResponse){}
    rpc ForgotPassword(ForgotPasswordRequest) returns(ForgotPasswordResponse){}
    rpc GetAllUsers(GetAllUsersRequest) returns(GetAllUsersResponse){}
    rpc GetById(GetByIdRequest) returns(GetByIdResponse){}
}

message RegisterUserRequest{
    string username = 1;
    string email = 2;
    string password = 3;
    string id = 4;
}

message RegisterUserResponse{}

message LoginUserRequest{
    string email = 1;
    string password = 2;
}

message LoginUserResponse{
    string id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string username = 5;
}

message UpdateUserRequest{
    string id = 1;
    string email = 2;
    string password = 3;
    string username = 4;
}

message UpdateUserResponse{
    string id  = 1;
    string email = 2;
    string password = 3;
    string username = 4;
    string role = 5;
}

message DeleteUserRequest{
    string id = 1;
}

message DeleteUserResponse{}

message GetAllUsersRequest{
    int32 limit = 1;
    int32 offset = 2;
}

message GetAllUsersResponse{
    repeated LoginUserResponse user = 1;
}

message GetByIdRequest{
    string id = 1;
}

message GetByIdResponse{
    string id  = 1;
    string email = 2;
    string password = 3;
    string username = 4;
    string role = 5;
}

message ChangePasswordRequest{
    string id = 1;
    string current_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse{}

message ResetPasswordRequest{
    string id = 1;
    string password = 2;
    string reset_token = 3;
}

message ResetPasswordResponse{}

message ForgotPasswordRequest{
    string email = 1;
}

message ForgotPasswordResponse{}